bugfix: blogpost layout bugfix, 15050 :)

--- a/src/assets/styles/blogpage.less
+++ b/src/assets/styles/blogpage.less
@@ -1,5 +1,5 @@
 .blog-content {
-  padding: 100px 30px;
+  padding: 100px 0;
   .blog-image {
     display: flex;
     align-items: center;
@@ -9,7 +9,7 @@
   .description {
     margin-top: 40px;
     &::first-letter {
-      font-size: 50px;
+      font-size: 3.5rem;
       font-weight: bold;
       font-family: 'Marck Script, Arial, Helvetica, sans-serif';
       initial-letter: 2;
